--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,13 @@
 runtime: python311
 
-entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker main:app
+entrypoint: gunicorn -w 4 -k uvicorn.workers.UvicornWorker --preload --timeout 30 main:app
 
 instance_class: F2  # or F1, F4 depending on your needs
+
+automatic_scaling:
+  min_instances: 1  # Always keep at least 1 instance running
+  max_instances: 5  # Scale up to 5 instances as needed
+  target_cpu_utilization: 0.65  # Scale based on CPU usage
 
 env_variables:
   PYTHONUNBUFFERED: '1'
@@ -23,5 +28,11 @@ handlers:
 readiness_check:
   path: "/_ah/warmup"             # Route to call to test if app is ready
   check_interval_sec: 5           # Ping every 5 seconds to see if it's ready
-  timeout_sec: 4                  # If no response in 4 seconds, consider it failed
-  failure_threshold: 2            # Fail only after 2 consecutive failures
+  timeout_sec: 10                 # Increased timeout for readiness check
+  failure_threshold: 3            # Fail only after 3 consecutive failures
+
+health_check:
+  enable_health_check: true
+  check_interval_sec: 5
+  timeout_sec: 10                 # Increased timeout for health check
+
